--- a/consumer.yml
+++ b/consumer.yml
@@ -5,7 +5,7 @@ applications:
   instances: 1
   memory: 1G
   random-route: true
-  buildpack: java_buildpack_offline
+  buildpack: java_buildpack
   services:
   - my-rabbit-mq
   stack: cflinuxfs2
