--- a/producer.yml
+++ b/producer.yml
@@ -4,11 +4,10 @@ applications:
   disk_quota: 1G
   instances: 1
   memory: 1G
-  disk_quota: 512M
   random-route: true
   buildpack: java_buildpack_offline
   services:
-  - rabbit-mq
+  - rabbit1
   stack: cflinuxfs2
   env:
     CONSUMER: false
