--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.rabbitmq.listener.direct.prefetch=1
 spring.rabbitmq.listener.simple.prefetch=1
 management.security.enabled=false
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=ALWAYS
 management.metrics.web.server.auto-time-requests=true
 endpointsprometheus.enabled=true
 
