--- a/consumer.yml
+++ b/consumer.yml
@@ -5,9 +5,7 @@ applications:
   memory: 1G
   random-route: true
   services:
-    - rabbit2
-    - myforwarder
-  stack: cflinuxfs2
+    - rabbit-mq
   env:
     CONSUMER: true
     PRODUCER: false
