--- a/pom.xml
+++ b/pom.xml
@@ -96,11 +96,17 @@
             <scope>runtime</scope>
         </dependency>
  -->
-<!--         <dependency>
+<!-- 		<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-sleuth</artifactId>
-        </dependency>
- -->    </dependencies>
+        </dependency>  -->
+        <dependency>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>micrometer-registry-atlas</artifactId>
+		    <!-- <version>0.12.0.RELEASE</version> -->
+		    <version>1.2.0</version>
+		</dependency>
+	</dependencies>
 
     <build>
         <plugins>
