--- a/producer.yml
+++ b/producer.yml
@@ -6,8 +6,7 @@ applications:
   memory: 1G
   random-route: true
   services:
-  - rabbit3
-  stack: cflinuxfs2
+  - rabbit-mq
   env:
     CONSUMER: false
     PRODUCER: true
