--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.rabbitmq.listener.direct.prefetch=1
-spring.rabbitmq.listener.simple.prefetch=1
+#spring.rabbitmq.listener.direct.prefetch=1
+#spring.rabbitmq.listener.simple.prefetch=1
 management.security.enabled=false
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
