--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,10 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
 management.metrics.web.server.auto-time-requests=true
 endpointsprometheus.enabled=true
+# s3 | file
+filetype=file
+accesskey=
+accesssecret=
+bucketname=a-sample-bucket-9b289a5080e2
+datapath=data
 
